# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
page_loader/: __init__.py  cli.py  fs_modul.py  log_setup.py  name_generator.py  name_generators.py  page_loader.py  resource_loader.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
