[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Data-Wan <ustimenko.work@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
requests-mock = "^1.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "./tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''(
          /(
          \.eggs         # exclude a few common directories in the
          | \.git          # root of the project
          | \.hg
          | \.mypy_cache
          | \.tox
          | \.venv
          | _build
          | buck-out
          | build
          | dist
          )/
          | foo.py           # also separately exclude a file named foo.py in
          # the root of the project
          )'''
